--- a/EventTrackerWPF/Localization/EN.csv
+++ b/EventTrackerWPF/Localization/EN.csv
@@ -74,8 +74,8 @@
 "TID_STATUS_FETCHING_FAIL","Fetch failed!"
 "TID_STATUS_FETCHING_SUCCESS","Done!"
 "TID_STATUS_FETCHING_RESET","Reset..."
-"TID_UNKNOWN_EVENT","NO ONGOING EVENT DETECTED"
-"TID_UNKNOWN_EVENT_DESC",""
+"TID_UNKNOWN_EVENT","DATA UNAVAILABLE"
+"TID_UNKNOWN_EVENT_DESC","<c9ef700>Unavailable</c>"
 "TID_LANGUAGE","LANGUAGE"
 "TID_LANGUAGE_TITLE","SELECT LANGUAGE"
 "TID_CONFIRM_LANGUAGE_CHANGE_TITLE","Change language?"
