--- a/EventTrackerWPF/Localization/VI.csv
+++ b/EventTrackerWPF/Localization/VI.csv
@@ -74,6 +74,8 @@
 "TID_STATUS_FETCHING_FAIL","Tra cứu không thành công!"
 "TID_STATUS_FETCHING_SUCCESS","Xong!"
 "TID_STATUS_FETCHING_RESET","Đặt lại..."
+"TID_UNKNOWN_EVENT","KHÔNG CÓ DỮ LIỆU"
+"TID_UNKNOWN_EVENT_DESC","<c9ef700>Trống</c>"
 "TID_LANGUAGE","NGÔN NGỮ"
 "TID_LANGUAGE_TITLE","CHỌN NGÔN NGỮ"
 "TID_CONFIRM_LANGUAGE_CHANGE_TITLE","Thay đổi ngôn ngữ?"
