--- a/EventTrackerWPF/Localization/EN.csv
+++ b/EventTrackerWPF/Localization/EN.csv
@@ -160,6 +160,10 @@
 "TID_DISCORD_RPC_LOAD_FAIL_WARNING_DESC","Couldn't initialize Discord Rich Presence!\nDo you want to proceed without it?"
 "TID_DISCORD_RPC_LOAD_FAIL_WARNING_YES","Run it back!!!"
 "TID_DISCORD_RPC_LOAD_FAIL_WARNING_NO","Nah"
+"TID_DISCORD_RPC_GENERIC_LABEL","<POINTS> points"
+"TID_DISCORD_RPC_GENERIC_DESC","<PERCENT>% progress"
+"TID_DISCORD_RPC_LOADING_DATA","Loading data..."
+"TID_DISCORD_RPC_LOADING_DATA_WAITING","Waiting..."
 "TID_EVENT_TRACKER_SUBTEXT","Community Event Tracker"
 "TID_EVENT_ENDS_IN","Event ends in: <TIME>"
 "TID_EVENT_HISTORY_TITLE","HISTORY"
