--- a/EventTrackerWPF/Localization/VI.csv
+++ b/EventTrackerWPF/Localization/VI.csv
@@ -160,6 +160,10 @@
 "TID_DISCORD_RPC_LOAD_FAIL_WARNING_DESC","Không thể sử dụng Discord Rich Presence ở thởi điểm này!\nBạn có muốn tiếp tục mà không dùng nó không?"
 "TID_DISCORD_RPC_LOAD_FAIL_WARNING_YES","Bật lại đi!!!"
 "TID_DISCORD_RPC_LOAD_FAIL_WARNING_NO","Thôi kệ"
+"TID_DISCORD_RPC_GENERIC_LABEL","<POINTS> điểm"
+"TID_DISCORD_RPC_GENERIC_DESC","<PERCENT>% tiến trình"
+"TID_DISCORD_RPC_LOADING_DATA","Đang tải dữ liệu..."
+"TID_DISCORD_RPC_LOADING_DATA_WAITING","Xin chờ..."
 "TID_EVENT_TRACKER_SUBTEXT","Tra cứu SK Cộng đồng"
 "TID_EVENT_ENDS_IN","Sự kiện kết thúc sau: <TIME>"
 "TID_EVENT_HISTORY_TITLE","LỊCH SỬ"
